--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+*
+
+!.gitignore
+!README.md
+!note.md
+!cp2sub.sh
+
+!*/
+!ex*/
+!ex*/**/
+
+!ex*/**/*.cpp
+!ex*/**/*.hpp
+!ex*/**/Makefile
+
+*.o
+*.d
 en.subject.pdf
